src/app/[locale]/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --light-bg-principal: #FFFCFC;
  --light-bg-secondary: #F0F1F2;

  --light-primary: #0BBF7D;
  --light-secondary: #124F66;





  --bg-dark: rgba(33, 42, 49, 100%);
  --bg-dark2: rgba(18, 78, 102, 60%);

  --primary-dark: rgba(18, 78, 102, 100%);
  /*--primary-light: rgb(28, 122, 159);*/
  --secondary: rgb(18, 18, 19, 80%);
  --icons-buttons: rgba(116, 141, 146, 100%);
  --nav-background: rgb(40, 52, 77, 0.9);

  --gradient-light-1: #2e3944;
  --gradient-light-2: rgba(18, 78, 102, 100%);

  --gradient-dark-1: rgba(116, 141, 146, 100%);
  --gradient-dark-2: #d3d9d4;
}

@layer components {
  .section {
    @apply flex flex-col w-full min-h-[500px] [&>div]:max-w-7xl items-center pb-28
  }

  .gradient-title {
    @apply bg-clip-text text-transparent bg-gradient-to-l from-[--gradient-light-1] to-[--gradient-light-2] dark:from-[--gradient-dark-1] dark:to-[--gradient-dark-2]
  }
}

.number-box{
  background-origin: border-box;
  background-clip: content-box, border-box;
  border: double 0.2em transparent;
  border-radius: 12px;
  background-image: linear-gradient(var(--light-bg-secondary), var(--light-bg-secondary)),
  linear-gradient(to right,  var(--light-primary) 0%, var(--light-bg-secondary) 60%);

}

